--- a/index.html
+++ b/index.html
@@ -362,6 +362,13 @@
 
             .mobile-header {
                 display: flex;
+                position: absolute;
+                width: 92%;
+                top: 20px;
+            }
+
+            .section.active {
+                margin-top: 40%;
             }
 
             .content {
